--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -18,5 +18,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
     - name: Run Script.py
       run: py script.py
